Avoid wrapping on front page view

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -110,6 +110,7 @@ body {
 }
 #main aside .tags {
   white-space: nowrap;
+  flex-wrap: initial;
 }
 #readme {
   font-size: 1.2em;
